# echoes

./: .env.example  .gitignore  DEPLOY.md  README.md  pyproject.toml  render.yaml  requirements.txt
docs/: PRODUCT-历史回响-design.md
eval/: README.md  build_political_brief_eval_set.py  political_brief_eval_set.json
scripts/: analyze_ledger.py  build_then_vs_now.py  insight_ledger.py  measure_cpi_contamination.py  reclassify_select.py  reclassify_select_vintage.py  run_ledger.py  run_ledger_vintage.py  scan_catalyst_dates.py  scan_catalyst_dates_vintage.py
src/hindcast/: __init__.py  agents.py  asset_tiers.py  backtest.py  bridge.py  chain.py  cli.py  commodity.py  consult.py  continuous.py  derived.py  event_mod.py  fx.py  glossary.py  kaofa_f.py  llm.py  mcp_server.py  narrative_types.py  news_feed.py  policy_rate.py  political_brief.py  predict.py  rag.py  router.py  school_ledger.py  schools.py  state.py  structural_asof.py  translator.py  treasury_yield.py  vol_paradox.py  web.py
src/hindcast/data/: __init__.py  gap_dataset_step1.json  ground_truth.py  snapshots.py  then_vs_now.json  then_vs_now.json.pre-v056.bak
src/hindcast/disciplines/: __init__.py  anthropology.py  central_brain.py  economics.py  history.py  intl_relations.py  politics.py  sociology.py
src/hindcast/eval/: __init__.py  metrics.py  prereg.py  prereg_selftest.py  (+1 more)
tests/: test_honest_boundary.py  test_narrative_chain.py  test_smoke.py  test_translator.py
web/: echoes.html  index-v2.html  index.html  vercel.json
web/mockups/: compare.html  finalized.json  variant-b-datasheet.html
(+8 files in other folders)
